Changes to LPC17xx CMSIS Library
--------------------------------

$Id$

1. Imported LPC17xx CMSIS library from CMSISv2p00_LPC17xx.zip, from
   http://http://ics.nxp.com/support/lpcxpresso.